kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-devops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-devops
  template:
    metadata:
      labels:
        app: flask-devops
    spec:
      containers:
      - name: flask-container
        image: awaismalak/flask-devops-app:latest   # Jenkins / ArgoCD will update this tag
        ports:
        - containerPort: 5000

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
